--- a/res/xml/qs_panel_layout.xml
+++ b/res/xml/qs_panel_layout.xml
@@ -32,7 +32,14 @@
 				android:title="@string/qs_brightness_position_bottom_title"
 				android:summary="@string/qs_brightness_position_bottom_summary"
 				android:defaultValue="false"
-				android:dependency="qs_show_brightness_slider" />
+				android:dependency="qs_show_brightness" />
+
+			<com.android.settings.aquarios.SystemSettingSwitchPreference
+				android:key="qs_show_brightness_icon"
+				android:title="@string/brightness_icon_title"
+				android:summary="@string/brightness_icon_summary"
+				android:dependency="qs_show_brightness"
+				android:defaultValue="false"/>
 	</PreferenceCategory>
 
 	<PreferenceCategory
