--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -26,4 +26,12 @@
         <attr name="android:horizontalSpacing" />
     </declare-styleable>
 
+    <!-- Base attributes available to CustomSeekBarPreference. -->
+    <declare-styleable name="CustomSeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="units" format="string|reference" />
+    </declare-styleable>
+
 </resources>
