Disable Lockscreen Media Art [2/2]
Change-Id: I432c85c2736c38fca3d3e0824530ab17b2050b31

--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -37,10 +37,15 @@
             android:fragment="com.android.settings.AmbientPlaySettings" />
 
         <SwitchPreference
-                android:key="lockscreen_visualizer"
-                android:title="@string/lockscreen_visualizer_title"
-                android:summary="@string/lockscreen_visualizer_summary" />
+            android:key="lockscreen_visualizer"
+            android:title="@string/lockscreen_visualizer_title"
+            android:summary="@string/lockscreen_visualizer_summary" />
 
+        <org.candy.candyshop.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/media_art_title"
+            android:summary="@string/media_art_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <!--<PreferenceCategory
