QS tile titles visibility [2/2]
Change-Id: I53d17631cb86a3df9b1633431096b7c015fa414b

--- a/res/xml/custom_qs_rows_columns.xml
+++ b/res/xml/custom_qs_rows_columns.xml
@@ -62,6 +62,11 @@
         android:id="@+id/qs_options_category"
         android:title="@string/qs_options_category_title" >
 
+        <org.candy.candyshop.preference.SystemSettingSwitchPreference
+            android:key="qs_tile_title_visibility"
+            android:title="@string/qs_tile_title_visibility_title"
+            android:defaultValue="false" />
+
         <org.candy.candyshop.preference.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
