Screen off animations [2/2]
Change-Id: I4d17007a2d7d0347eb7a41d04c22b7e008dc7644

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -188,7 +188,7 @@
         <item>60000</item>
     </string-array>
 
-     <!-- Gesture Anywhere -->
+    <!-- Gesture Anywhere -->
     <string-array name="gesture_anywhere_position_entries" translatable="false">
         <item>@string/gesture_anywhere_position_left</item>
         <item>@string/gesture_anywhere_position_right</item>
@@ -206,5 +206,19 @@
         <item>3</item>
     </string-array>
 
+    <!-- Screen off animation --> 
+    <string-array name="screen_off_animation_entries"> 
+        <item>@string/screen_off_animation_fade</item> 
+        <item>@string/screen_off_animation_color</item> 
+        <item>@string/screen_off_animation_crt</item> 
+        <item>@string/screen_off_animation_scale</item> 
+    </string-array> 
+
+    <string-array name="screen_off_animation_values" translatable="false"> 
+        <item>0</item> 
+        <item>1</item> 
+        <item>2</item> 
+        <item>3</item> 
+    </string-array> 
 </resources>
 
