Add back battery bar [2/2]
Change-Id: I7f8bc2cb96a6db47f16484aee7f2e12c12fe0f50

--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -60,5 +60,9 @@
         android:title="@string/status_bar_clock_title"
         android:summary="@string/status_bar_clock_title_summary" />
 
-
+    <Preference
+         android:key="batterybar_settings"
+         android:title="@string/battery_bar_title"
+         android:summary="@string/battery_bar_summary"
+         android:fragment="org.carbonrom.carbonfibers.fragments.status_bar.BatterybarSettings" />
 </PreferenceScreen>
