Adjust paths for new preferences location
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/res/xml/lockscreen_display.xml
+++ b/res/xml/lockscreen_display.xml
@@ -19,7 +19,7 @@
     android:title="@string/lockscreen_display_title" >
 
     <!-- LockScreen Charging Info -->
-    <com.android.settings.aquarios.SystemSettingSwitchPreference
+    <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
@@ -28,13 +28,13 @@
     <PreferenceCategory
         android:title="@string/lock_screen_security_category">
 
-        <com.android.settings.aquarios.SystemSettingSwitchPreference
+        <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_scramble_pin_layout"
             android:title="@string/unlock_scramble_pin_layout_title"
             android:summary="@string/unlock_scramble_pin_layout_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.aquarios.SystemSettingSwitchPreference
+        <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_quick_unlock_control"
             android:title="@string/unlock_quick_unlock_control_title"
             android:summary="@string/unlock_quick_unlock_control_summary"
