--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -26,7 +26,7 @@
 				android:summary="@string/qs_rows_columns_title_summary"
 				android:fragment="com.aquarios.coralreef.fragments.QsPanelLayout"/>
 
-			<com.android.settings.aquarios.SystemSettingSwitchPreference
+			<com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
 				android:key="qs_footer_warnings"
 				android:title="@string/qs_footer_warnings_title"
 				android:summary="@string/qs_footer_warnings_summary"
