--- a/res/xml/volume_rocker.xml
+++ b/res/xml/volume_rocker.xml
@@ -18,7 +18,7 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/volume_rocker_title" >
 
-        <com.android.settings.aquarios.SystemSettingSwitchPreference
+        <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
             android:key="volume_button_music_control"
             android:title="@string/volume_rocker_music_controls_title"
             android:summary="@string/volume_rocker_music_controls_summary"
