Add toggle for hiding QS header [2/2]
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -31,6 +31,12 @@
 				android:title="@string/qs_footer_warnings_title"
 				android:summary="@string/qs_footer_warnings_summary"
 				android:defaultValue="true" />
+
+			<com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
+				android:key="qs_show_info_header"
+				android:title="@string/tuner_show_info_header_title"
+				android:summary="@string/tuner_show_info_header_category"
+				android:defaultValue="true" />
 	</PreferenceCategory>
 
 </PreferenceScreen>
