--- a/res/xml/clock_options.xml
+++ b/res/xml/clock_options.xml
@@ -21,12 +21,12 @@
     <PreferenceCategory
         android:title="@string/status_bar_clock_category">
 
-        <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
+        <com.aquarios.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_clock"
             android:title="@string/status_bar_clock"
             android:defaultValue="true" />
 
-        <com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
+        <com.aquarios.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_clock_seconds"
             android:title="@string/clock_seconds_display"
             android:dependency="status_bar_clock"
