--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -26,13 +26,13 @@
 				android:summary="@string/qs_rows_columns_title_summary"
 				android:fragment="com.aquarios.coralreef.fragments.QsPanelLayout"/>
 
-			<com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
+			<com.aquarios.support.preferences.SystemSettingSwitchPreference
 				android:key="qs_footer_warnings"
 				android:title="@string/qs_footer_warnings_title"
 				android:summary="@string/qs_footer_warnings_summary"
 				android:defaultValue="true" />
 
-			<com.aquarios.coralreef.preferences.SystemSettingSwitchPreference
+			<com.aquarios.support.preferences.SystemSettingSwitchPreference
 				android:key="qs_show_info_header"
 				android:title="@string/tuner_show_info_header_title"
 				android:summary="@string/tuner_show_info_header_category"
