Initial checkin for SmartNav navigation suite [4/4]

--- a/res/xml/buttons_tab.xml
+++ b/res/xml/buttons_tab.xml
@@ -21,9 +21,9 @@
         android:fragment="com.aquarios.coralreef.fragments.PowerMenu"
         android:layout="@layout/powermenu" />
 
-    <com.android.settings.applications.LayoutPreference
-        android:key="navigation_category"
-        android:fragment="com.aquarios.coralreef.fragments.NavigationBar"
+	<PreferenceScreen
+		android:fragment="com.android.settings.smartnav.NavigationBarSettings"
+		android:key="navigationbar_settings"
         android:layout="@layout/navigationbar" />
 
     <com.android.settings.applications.LayoutPreference
