qs: Add vibration on touch preference
Change-Id: Id08abe67dbc92bcffbf0e9d44dbcbadaaa51f540

--- a/res/xml/custom_qs_rows_columns.xml
+++ b/res/xml/custom_qs_rows_columns.xml
@@ -59,10 +59,10 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:id="@+id/qs_options_category_title"
+        android:id="@+id/qs_options_category"
         android:title="@string/qs_options_category_title" >
 
-        <org.candy.candyshop.preferenc.SecureSettingSwitchPreference
+        <org.candy.candyshop.preference.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
