--- a/res/xml/nav_gesture_settings.xml
+++ b/res/xml/nav_gesture_settings.xml
@@ -24,7 +24,7 @@
         app:animation="@raw/gesture_swipe_up"
         app:preview="@drawable/gesture_swipe_up" />
 
-    <org.candy.candyshop.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="gesture_swipe_up"
         android:title="@string/swipe_up_to_switch_apps_title"
         android:summary="@string/swipe_up_to_switch_apps_summary"
@@ -32,7 +32,7 @@
         app:controller="com.android.settings.gestures.SwipeUpPreferenceController"
         app:allowDividerAbove="true" />
 
-    <org.candy.candyshop.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="full_gesture_mode"
         android:title="@string/full_gesture_mode_title"
         android:summary="@string/full_gesture_mode_summary"
@@ -40,7 +40,7 @@
         app:controller="com.android.settings.gestures.SwipeUpPreferenceController"
         app:allowDividerAbove="true" />
 
-    <org.candy.candyshop.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="full_gesture_mode_dt2s"
         android:title="@string/full_gesture_mode_dt2s_title"
         android:summary="@string/full_gesture_mode_dt2s_summary"
