--- a/res/xml/stock_navbar.xml
+++ b/res/xml/stock_navbar.xml
@@ -26,21 +26,30 @@
         android:id="@+id/navbar_category_title"
         android:title="@string/navbar_category_title" >
 
+        <org.candy.candyshop.preference.SecureSettingSwitchPreference
+            android:key="navbar_visibility"
+            android:title="@string/enable_navigation_bar_title"
+            android:summary="@string/enable_navigation_bar_summary"
+            android:defaultValue="true" />
+
         <org.candy.candyshop.preference.SystemSettingSwitchPreference
             android:key="pixel_nav_animation"
             android:title="@string/pixel_navbar_anim_title"
             android:summary="@string/pixel_navbar_anim_summary"
+            android:dependency="navbar_visibility"
             android:defaultValue="false"  />
 
         <org.candy.candyshop.preference.SystemSettingSwitchPreference
             android:key="one_hand_mode_enabled"
             android:title="@string/one_hand_mode_title"
             android:summary="@string/one_hand_mode_summary"
+            android:dependency="navbar_visibility"
             android:defaultValue="false" />
 
         <Preference
             android:title="@string/navbar_tuner_title"
-            android:summary="@string/navbar_tuner_summary" >
+            android:summary="@string/navbar_tuner_summary"
+            android:dependency="navbar_visibility" >
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.NavBarTunerActivity" />
