lockscreen: Re-add the sleep controls category
Change-Id: I734478f6ccf75d1dddb21e06d897ff68518d97d6

--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -48,11 +48,16 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
-    <!--<PreferenceCategory
+    <PreferenceCategory
         android:key="sleep_controls_category"
         android:title="@string/sleep_controls_category_title" >
 
-    </PreferenceCategory>-->
+        <org.candy.candyshop.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_anywhere"
+            android:title="@string/double_tap_sleep_lockscreen"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:id="@+id/lockscreen_security_category"
@@ -82,11 +87,6 @@
            android:title="@string/lockscreen_qs_disabled_title"
            android:summary="@string/lockscreen_qs_disabled_summary"
            android:defaultValue="false" />
-
-        <org.candy.candyshop.preference.SystemSettingSwitchPreference
-            android:key="double_tap_sleep_anywhere"
-            android:title="@string/double_tap_sleep_lockscreen"
-            android:defaultValue="true" />
 
     </PreferenceCategory>
 
