--- a/res/xml/audio_display_options.xml
+++ b/res/xml/audio_display_options.xml
@@ -15,6 +15,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/audio_display_options_title" >
 
+    <preferenceCategory
+        android:title="@string/animations_options_category_title">
+        <ListPreference 
+            android:key="screen_off_animation" 
+            android:title="@string/screen_off_animation_title" 
+            android:entries="@array/screen_off_animation_entries" 
+            android:entryValues="@array/screen_off_animation_values"
+            android:defaultValue="0" /> 
+
     <PreferenceCategory
         android:title="@string/audio_options_category">
         <Preference
