all the animations
Change-Id: If33dd8e507fdc3cd2c109e2ebe04579d8f34465f

--- a/res/xml/stockroom.xml
+++ b/res/xml/stockroom.xml
@@ -34,7 +34,6 @@
             android:fragment="org.candy.candyshop.fragments.GestureAnywhereSettings"
             android:title="@string/gesture_anywhere_title"
             android:summary="@string/gesture_anywhere_summary" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -65,6 +64,11 @@
     <PreferenceCategory
         android:key="miscellaneous_category"
         android:title="@string/miscellaneous_category_title" >
+
+        <Preference
+            android:key="candy_animations"
+            android:title="@string/animations_title"
+            android:fragment="org.candy.candyshop.fragments.Animations" />
 
         <SwitchPreference
             android:key="show_cpu_info"
