--- a/res/xml/candy_animations.xml
+++ b/res/xml/candy_animations.xml
@@ -16,17 +16,63 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/animations_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    xmlns:candyshop="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory 
         android:title="@string/system_keyguard_animation_title"
-        android:key="system_title"  >
-          
-        <ListPreference 
-            android:key="screen_off_animation" 
-            android:title="@string/screen_off_animation_title" 
-            android:entries="@array/screen_off_animation_entries" 
+        android:key="system_title" >
+
+        <ListPreference
+            android:key="screen_off_animation"
+            android:title="@string/screen_off_animation_title"
+            android:entries="@array/screen_off_animation_entries"
             android:entryValues="@array/screen_off_animation_values"
-            android:defaultValue="0" /> 
+            android:defaultValue="0" />
+
+         <PreferenceScreen
+            android:key="system_animation"
+            android:title="@string/system_animation_title"
+            android:summary="@string/system_animation_summary"
+            android:fragment="org.candy.candyshop.fragments.ui.AnimationControls" />
     </PreferenceCategory>
+
+    <PreferenceCategory 
+         android:title="@string/tile_animation_title"
+         android:key="tile_animation">
+
+        <org.candy.candyshop.preferences.SystemSettingListPreference
+             android:key="anim_tile_style"
+             android:title="@string/qs_tile_animation_style_title"
+             android:entries="@array/qs_tile_animation_style_entries"
+             android:entryValues="@array/qs_tile_animation_style_values"
+            android:defaultValue="0" />
+
+        <org.candy.candyshop.preferences.SystemSettingListPreference
+            android:key="animation_controls_duration"
+            android:title="@string/qs_tile_animation_duration_title"
+            android:entries="@array/qs_tile_animation_duration_entries"
+            android:entryValues="@array/qs_tile_animation_duration_values"
+            android:defaultValue="2000" />
+
+        <org.candy.candyshop.preferences.SystemSettingListPreference
+            android:key="anim_tile_interpolator"
+            android:title="@string/qs_tile_animation_interpolator_title"
+            android:entries="@array/qs_tile_animation_interpolator_entries"
+            android:entryValues="@array/qs_tile_animation_interpolator_values"
+            android:defaultValue="0" />
+     </PreferenceCategory>
+
+     <PreferenceCategory 
+         android:title="@string/misc_animation_title"
+         android:key="misc_animation"  >
+
+          <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false" />
+     </PreferenceCategory>
+
 </PreferenceScreen>
