Add lockscreen media art blur option
Change-Id: I29d37709446a54835ec32685c909946b9799d611

--- a/res/xml/lockscreen_display.xml
+++ b/res/xml/lockscreen_display.xml
@@ -18,4 +18,13 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/lockscreen_display_title" >
 
+     <com.aquarios.support.preferences.CustomSystemSeekBarPreference
+        android:key="lockscreen_media_blur"
+        android:title="@string/lockscreen_media_blur_title"
+        settings:allowEditText="true"
+        android:max="2500"
+        android:min="1"
+        android:defaultValue="2500"
+        settings:units="dp" />
+
 </PreferenceScreen>
